# GTBox

./: .gitignore  README.md  下一步计划.md  开发方案.md  快捷翻译-开发方案.md
SR/: .gitignore  PACKAGING.md  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts  开发方案.md
SR/scripts/: prepare-bundle.ps1  prepare-python.ps1
SR/src/: App.vue  OverlayApp.vue  engines.ts  overlay-main.ts  overlayBgLayout.ts  overlayLayout.ts  overlayTextAnimate.ts  overlayTheme.ts  theme.ts  types.ts
SR/src-tauri/: Cargo.toml  tauri.conf.json
SR/src-tauri/capabilities/: default.json
SR/src-tauri/icons/: icon.icns
SR/src-tauri/resources/: streaming_asr.py
SR/src-tauri/src/: app_data.rs  appearance.rs  asr_daemon.rs  audio.rs  debug_log.rs  focus.rs  launch.rs  lib.rs  main.rs  model_path.rs  overlay.rs  session.rs  settings.rs  text_inject.rs  window_layout.rs  window_util.rs
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.vue  main.ts  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
plugins/: README.md
plugins/batch_rename/: manifest.json
plugins/full_auto_download/: manifest.json
plugins/playlist_ocr/: manifest.json  region_ocr.py
plugins/split_pic/: manifest.json
scripts/: bizhihui_wallpaper.py
scripts/dev/: README.md  _compare_playlist.py  _compare_report.txt  _compare_result.json  _compare_result.txt  _compare_run.py  _downloads_files.txt  _playlist_user.txt
workspaces/: README.md
workspaces/auto_change_file_name/: .gitignore  批量文件改名.py
workspaces/music_crawl/: .gitignore  README.md  (+6 more)
(+85 files in other folders)
